# SoundLocator

./: .gitignore  LICENSE  README.md  led_runner.py  main.py  pyproject.toml  sound_processor.py
config/: config.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
logic/: behaviors.py  color_schemes.py  leds.py  presets.py  sound_processor.py  strip_interface.py
systemd/: led-runner.service  sound-processor.service  soundlocator-api.service
