[tool.poetry]
name = "soundlocator"
version = "0.1.0"
description = "Stereo-reactive LED visualizer backend"
authors = ["Rasmus Nathanson"]
readme = "README.md"
packages = [{ include = "logic" }, { include = "config" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
adafruit-circuitpython-neopixel = "^6.3.15"
pydantic = "^1.10.13"
fastapi = "^0.109.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
